# NCM

./: README.md
2015-02-15/: README.md
2015-02-15/examples-code/: 05-B-task-work.cc  06-A-rb-reply.cc  06-C-rb-proxy-B.cc
2015-02-15/examples-html/: 02-hw-client.html  03-pub-sub-server.html  05-A-task-source.html  05-B-task-work.html  05-C-task-sink.html  06-B-rb-worker.html
2015-02-15__zmq_microservices/examples-code/: 06-B-rb-worker.cc  06-C-rb-proxy-A.cc  Makefile
2015-02-15__zmq_microservices/examples-html/: 01-hw-server.html  04-pub-sub-client.html  06-A-rb-reply.html  06-C-rb-proxy-A.html  06-C-rb-proxy-B.html
2015-06-22/3__Jeff/: README.md
2015-06-22/4__Johan/: README.md  bar.cpp  build.sh  cxx-modules.odp  foo.cpp  module.modulemap
2015-06-22__quickies/4__Johan/: bar.hpp  foo.hpp  prog.cpp
2015-09-21__sérialisation/: README.md
2015-10-19/: README.md  main.cpp  max_variadic_macro.hpp  max_variadic_template.hpp
2015-10-19__variadic_templates/: CMakeLists.txt  demangle.hpp  emplace_back.hpp  max_c_style_variadic_function.hpp  perfect_forwarding.hpp  safe_printf.hpp
2015-11-16/02_Pierre_Salmon/: README.md
2015-11-16/02_Pierre_Salmon/presC++14/: cpp14.html  cpp14.md  install.sh
2015-11-16__C++14/02_Pierre_Salmon/presC++14/: check-file.sh
2016-10-24_Modern-C-from-real-life-project/: readme.md
